// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`base 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    accessible={true}
    focusable={false}
    isTVSelectable={true}
    style={
      Object {
        "opacity": 1,
      }
    }
    testID="assessment-button"
  >
    <View
      style={
        Array [
          Object {
            "borderRadius": 10,
            "paddingHorizontal": 14,
            "paddingVertical": 22,
          },
          Object {
            "backgroundColor": "rgb(105,121,248)",
          },
        ]
      }
    >
      <Text
        style={
          Object {
            "color": "#FFF",
            "fontFamily": "IBMPlexSans",
            "fontSize": 18,
            "fontWeight": "normal",
            "lineHeight": 24,
            "textAlign": "center",
            "writingDirection": "ltr",
          }
        }
        use="body1"
      >
        Next
      </Text>
    </View>
  </View>
</View>
`;

exports[`color 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    accessible={true}
    focusable={false}
    isTVSelectable={true}
    style={
      Object {
        "opacity": 1,
      }
    }
    testID="assessment-button"
  >
    <View
      style={
        Array [
          Object {
            "borderRadius": 10,
            "paddingHorizontal": 14,
            "paddingVertical": 22,
          },
          Object {
            "backgroundColor": "red",
          },
        ]
      }
    >
      <Text
        style={
          Object {
            "color": "#FFF",
            "fontFamily": "IBMPlexSans",
            "fontSize": 18,
            "fontWeight": "normal",
            "lineHeight": 24,
            "textAlign": "center",
            "writingDirection": "ltr",
          }
        }
        use="body1"
      >
        Next
      </Text>
    </View>
  </View>
</View>
`;

exports[`disabled 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    accessible={true}
    focusable={false}
    isTVSelectable={true}
    style={
      Object {
        "opacity": 1,
      }
    }
    testID="assessment-button"
  >
    <View
      style={
        Array [
          Object {
            "borderRadius": 10,
            "paddingHorizontal": 14,
            "paddingVertical": 22,
          },
          Object {
            "backgroundColor": "#868686",
          },
        ]
      }
    >
      <Text
        style={
          Object {
            "color": "#FFF",
            "fontFamily": "IBMPlexSans",
            "fontSize": 18,
            "fontWeight": "normal",
            "lineHeight": 24,
            "textAlign": "center",
            "writingDirection": "ltr",
          }
        }
        use="body1"
      >
        Next
      </Text>
    </View>
  </View>
</View>
`;
